# OOP-game-in-C-using-console

./: CMakeLists.txt  Czlowiek.cpp  Czlowiek.h  Defines.h  Organizm.cpp  Organizm.h  README.md  R_BarszczSosnowskiego.cpp  R_BarszczSosnowskiego.h  R_Guarana.cpp  R_Guarana.h  R_Mlecz.cpp  R_Mlecz.h  R_Trawa.cpp  R_Trawa.h  R_WilczeJagody.cpp  R_WilczeJagody.h  Roslina.cpp
Debug/: v1.exe.recipe
Debug/v1.tlog/: v1.lastbuildstate
