cmake_minimum_required(VERSION 3.21)
project(Projekt1PO___Filip_Soltys)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Projekt1PO___Filip_Soltys
        Czlowiek.cpp
        Czlowiek.h
        Defines.h
        Organizm.cpp
        Organizm.h
        R_BarszczSosnowskiego.cpp
        R_BarszczSosnowskiego.h
        R_Guarana.cpp
        R_Guarana.h
        R_Mlecz.cpp
        R_Mlecz.h
        R_Trawa.cpp
        R_Trawa.h
        R_WilczeJagody.cpp
        R_WilczeJagody.h
        Roslina.cpp
        Roslina.h
        Swiat.cpp
        Swiat.h
        Symulator1.cpp
        TrujacaRoslina.cpp
        TrujacaRoslina.h
        Z_Antylopa.cpp
        Z_Antylopa.h
        Z_Lis.cpp
        Z_Lis.h
        Z_Owca.cpp
        Z_Owca.h
        Z_Wilk.cpp
        Z_Wilk.h
        Z_Zolw.cpp
        Z_Zolw.h
        Zwierze.cpp
        Zwierze.h
        )
